[package]
name = "dis-bootloader"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.3", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.3"
nrf9160-pac = "0.10.1"

panic-persist = "0.3.0"

embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread"
] }
embassy-nrf = { version = "0.8.0", features = [
    "unstable-pac",
] }

shared = { path = "../shared" }
arrayvec = { version = "0.7.2", default-features = false }
rtt-target = { version = "0.4.0" }

[features]
default = ["nrf9120"]

uart-log = []

logistics = ["uart-log"]
mobility = ["uart-log"]
feather = ["uart-log"]
turing = ["uart-log"]
actinius_icarus = ["uart-log"]

nrf9160 = ["embassy-nrf/nrf9160-s"]
nrf9120 = ["embassy-nrf/nrf9120-s"]
